--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,10 @@ numpy = "^2.1.1"
 pandas = "^2.2.3"
 
 
+[tool.poetry.group.dev.dependencies]
+black = "^24.8.0"
+pylint = "^3.3.1"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
