--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
           cache: poetry
       
       - name: Install dependencies
-        run: poetry install --with dev
+        run: poetry install --with ci
 
       # Ensure the code is clean
       - name: Lint code
