--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,7 @@ on:
       - main
 
 jobs:
-  install:
+  train-model:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -22,18 +22,11 @@ jobs:
 
       - name: Install dependencies
         run: poetry install --with ci
-  lint:
-    runs-on: ubuntu-latest
-    needs: [install]
-    steps:
+
       # Ensure the code is clean
       - name: Lint code
         run: pylint my_ml
-  
-  train:
-    runs-on: ubuntu-latest
-    needs: [install]
-    steps:
+
       # Run code
       - name: Simulate training
         run: python my_ml/main.py
